# Slim_Mesh_Optimization

./: README.md
Slim_Mesh_Optimization/: CMakeLists.txt  Slim_Mesh_Optimization.cpp  Slim_Mesh_Optimization.h
Slim_Mesh_Optimization/alg/: CMakeLists.txt  mesh_opt.cpp  mesh_opt.h  meshing.h  metro_hausdorff.cpp  metro_hausdorff.h  optimization.cpp  optimization.h  slim_m.cpp  slim_m.h
Slim_Mesh_Optimization/alg/grid_meshing/: grid_hex_meshing.cpp  grid_hex_meshing.h
Slim_Mesh_Optimization/common/: CMakeLists.txt  conf.h  global_functions.cpp  global_functions.h  global_types.cpp  global_types.h  util.cpp  util.h
Slim_Mesh_Optimization/data/config/: test.config
Slim_Mesh_Optimization/data/objs/: cube_tet.vtk  ele_tet.vtk  tet_bar.vtk
Slim_Mesh_Optimization/data/output/: cube_tet_output.vtk  ele_tet_output.vtk  test_tet_output.vtk
Slim_Mesh_Optimization/io/: CMakeLists.txt  io.cpp  io.h
Slim_Mesh_Optimization/main/: CMakeLists.txt  data_shared_path.h  main.cpp  parse_config_file.cpp  parse_config_file.h
